<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.SelectFragment">

    <!--  Grids / guide lines  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_centre_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  Select  -->
    <TextView
        android:id="@+id/message_select"
        style="@style/heading_title_top"
        android:text="@string/select_eyes_color"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_end"
        app:layout_constraintStart_toStartOf="@+id/guide_line_start"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 1 Brown-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_brown"
        style="@style/style_card_view_end"
        app:cardBackgroundColor="@color/eyesColorBrown"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_centre_vertical"
        app:layout_constraintTop_toBottomOf="@+id/message_select">

        <ImageView
            android:id="@+id/iv_brown"
            style="@style/style_image_inside_card_view"
            android:contentDescription="@string/no_description"
            android:src="@drawable/ic_eye_24" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/message_brown"
        style="@style/heading_title_start"
        android:text="@string/brown"
        app:layout_constraintBottom_toBottomOf="@+id/card_brown"
        app:layout_constraintStart_toStartOf="@+id/guide_line_centre_vertical"
        app:layout_constraintTop_toTopOf="@+id/card_brown" />

    <!-- 2 Blue/grey-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_grey"
        style="@style/style_card_view_end"
        android:visibility="visible"
        app:cardBackgroundColor="@color/eyesColorGrey"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_centre_vertical"
        app:layout_constraintTop_toBottomOf="@+id/card_brown">

        <ImageView
            android:id="@+id/iv_grey"
            style="@style/style_image_inside_card_view"
            android:contentDescription="@string/no_description"
            android:src="@drawable/ic_eye_24" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/message_grey"
        style="@style/heading_title_start"
        android:text="@string/blue_grey"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/card_grey"
        app:layout_constraintStart_toStartOf="@+id/guide_line_centre_vertical"
        app:layout_constraintTop_toTopOf="@+id/card_grey" />

    <!-- 3 Green -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_green"
        style="@style/style_card_view_end"
        android:visibility="visible"
        app:cardBackgroundColor="@color/eyesColorGreen"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_centre_vertical"
        app:layout_constraintTop_toBottomOf="@+id/card_grey">

        <ImageView
            android:id="@+id/iv_green"
            style="@style/style_image_inside_card_view"
            android:contentDescription="@string/no_description"
            android:src="@drawable/ic_eye_24" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/message_green"
        style="@style/heading_title_start"
        android:text="@string/green"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/card_green"
        app:layout_constraintStart_toStartOf="@+id/guide_line_centre_vertical"
        app:layout_constraintTop_toTopOf="@+id/card_green" />

</androidx.constraintlayout.widget.ConstraintLayout>
