<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.SelectEyesFragment">

    <!--  Grids / guide lines  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_centre_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  Select  -->

    <!--    <com.google.android.material.card.MaterialCardView-->
    <!--        android:id="@+id/card_select_back"-->
    <!--        style="@style/style_card_view_back_child"-->
    <!--        app:cardBackgroundColor="@color/white_transparent"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/card_green"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/guide_line_end"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/guide_line_start"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="1.0" />-->


    <TextView
        android:id="@+id/eye_select_title"
        style="@style/txt_title_margin_top"
        android:text="@string/select_eyes_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 1 Brown-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/eye_select_card_brown"
        style="@style/card_parent"
        android:layout_marginTop="@dimen/step_normal_plus"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_centre_vertical"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toBottomOf="@+id/eye_select_title">
        <!--        app:cardBackgroundColor="@color/eyesColorBrown"-->

        <ImageView
            android:id="@+id/iv_empty_gradient_brown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_brown"
            android:contentDescription="@string/no_description" />
        <!--        empty pic is not requied to use-->
        <!--        android:src="@drawable/emp_24" />-->

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/card_constraint">


            <ImageView
                android:id="@+id/eye_select_1_icon"
                style="@style/iv_icon"
                android:src="@drawable/ic_eye_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/eye_select_1_hint"
                style="@style/txt_hint_inner_right"
                android:text="@string/brown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/eye_select_1_icon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <!--    <TextView-->
    <!--        android:id="@+id/message_brown"-->
    <!--        style="@style/title_button_top_start"-->
    <!--        android:text="@string/brown"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/card_brown"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/guide_line_centre_vertical"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/card_brown" />-->

    <!-- 2 Blue/grey-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/eye_select_card_grey"
        style="@style/card_parent"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_centre_vertical"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toBottomOf="@+id/eye_select_card_brown">

        <ImageView
            android:id="@+id/iv_empty_gradient_blue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_blue"
            android:contentDescription="@string/no_description" />

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/card_constraint">

            <ImageView
                android:id="@+id/blood_select_2_icon"
                style="@style/iv_icon"
                android:src="@drawable/ic_eye_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/blood_select_2_hint"
                style="@style/txt_hint_inner_right"
                android:text="@string/blue_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/blood_select_2_icon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <!--    <TextView-->
    <!--        android:id="@+id/message_grey"-->
    <!--        style="@style/title_button_top_start"-->
    <!--        android:text="@string/blue_grey"-->
    <!--        android:visibility="visible"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/card_grey"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/guide_line_centre_vertical"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/card_grey" />-->

    <!-- 3 Green -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/eye_select_card_green"
        style="@style/card_parent"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_centre_vertical"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toBottomOf="@+id/eye_select_card_grey">

        <ImageView
            android:id="@+id/iv_empty_gradient_green"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_green"
            android:contentDescription="@string/no_description" />

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/card_constraint">

            <ImageView
                android:id="@+id/blood_select_3_icon"
                style="@style/iv_icon"
                android:src="@drawable/ic_eye_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/blood_select_3_hint"
                style="@style/txt_hint_inner_right"
                android:text="@string/green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/blood_select_3_icon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <!--    <TextView-->
    <!--        android:id="@+id/message_green"-->
    <!--        style="@style/title_button_top_start"-->
    <!--        android:text="@string/green"-->
    <!--        android:visibility="visible"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/card_green"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/guide_line_centre_vertical"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/card_green" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
